2008-08-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/regexp.test, tests/regexpComp.test: correct re2glob ***=
	* generic/tclUtil.c (TclReToGlob):          translation from exact
	to anywhere-in-string match. [Bug 2065115]

2008-08-20  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclTest.c (TestconcatobjCmd):	fix use of internal-only
						TclInvalidateStringRep macro.
						[Bug 2057479]

2008-08-17  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclTest.c (TestconcatobjCmd):
	* generic/tclUtil.c (Tcl_ConcatObj): 
	* tests/util.test (util-4.7): 
	fix [Bug 1447328]; the original "fix" turned Tcl_ConcatObj() into
	a hairy monster. This was exposed by [Bug 2055782]. Additionally,
	Tcl_ConcatObj could corrupt its input under certain conditions!

	*** NASTY BUG FIXED ***

2008-08-14  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.4 TAGGED FOR RELEASE ***

	* tests/fileName.test:  Revise new tests for portability to case
	insensitive filesystems.

2008-08-14  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclCompile.h:		add support for debug logging of DTrace
	* generic/tclBasic.c:		'proc', 'cmd' and 'inst' probes (does
					_not_ require a platform with DTrace).

	* generic/tclCmdIL.c (TclInfoFrame):	check fPtr->line before
						dereferencing as line info may
						not exists when TclInfoFrame()
						is called from a DTrace probe.

	* tests/msgcat.test:		fix for ::tcl::mac::locale with
					@modifier (HEAD backport 2008-06-01).

	* tests/fCmd.test (fCmd-6.23):	made result matching robust when test
					workdir and /tmp are not on same FS.

	* unix/Makefile.in:		ensure Makefile shell is /bin/bash for
	* unix/configure.in (SunOS):	DTrace-enabled build on Solaris.
					(followup to 2008-06-12) [Bug 2016584]

	* unix/tcl.m4 (SC_PATH_X):	check for libX11.dylib in addition to
					libX11.so et al.

	* unix/configure: 		autoconf-2.59

2008-08-13  Don Porter  <dgp@users.sourceforge.net>
