@@ -1,3 +1,9 @@
+2008-08-22  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclUtil.c (TclReToGlob):	Added missing set of the
+	*exactPtr value to really fix [Bug 2065115].
+	* tests/regexpComp.test:	Correct duplicate test names.
+
 2008-08-21  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tests/regexp.test, tests/regexpComp.test: correct re2glob ***=
